rnsc/test_data/integration/error/parser/class_header/int_class_name.rns
.class 42
.super java/lang/Object